--- a/app/locales/de/content.properties
+++ b/app/locales/de/content.properties
@@ -10,7 +10,10 @@ contact=Kontakt
 menu=Menü
 other-languages=Andere Sprachen:
 experience-start=Bereits während des Studiums arbeitete ich 40 - 60%, daher verfüge ich über eine überdurchschnittliche Berufserfahrung im Vergleich zu anderen Studenten. Heute studiere ich berufsbegleitend und kann somit 100% arbeiten, ohne das Studium in den Hintergrund zu stellen.
-experience-1-title=Oktober 2014 - heute
+experience-0-title=April 2015 - heute
+experience-0-company=NETCASE GmbH
+experience-0-desc=Web-Entwickler - NodeJS, JavaScript
+experience-1-title=Oktober 2014 - Februar 2015
 experience-1-company=Swisscom AG
 experience-1-desc=Applikationsentwickler - Document Management - Templating, Requirement Engineering, 2nd Level Support
 experience-2-title=Januar 2014 - Juni 2014
@@ -55,8 +58,3 @@ hobbies-1-desc=Seit 2008 arbeite ich als Freiwilliger in der Mozilla Community m
 hobbies-2-desc=Mit meiner Überzeugung, dass wir alle für ein offenes Web einstehen müssen, passt dies wunderbar zu meiner Arbeit für Mozilla.
 my-blog=Mein Blog
 references-1-begin=Aus Rücksicht auf die Privatsphäre aller beteiligten Personen verzichte ich auf die Veröffentlichung von Zeugnissen, Arbeitsbewertungen und dergleichen. Auf Anfrage gebe ich diese natürlich gerne heraus.
-
-
-
-
-
