--- a/app/locales/en/content.properties
+++ b/app/locales/en/content.properties
@@ -10,7 +10,10 @@ contact=Contact
 menu=Menu
 other-languages=Other languages:
 experience-start=During my studies I already worked 40 - 60%, therefore I have quite over-average working experience compared to other students. Today I study on weekends, so I can focus on working and studying.
-experience-1-title=October 2014 - now
+experience-0-title=April 2015 - now
+experience-0-company=NETCASE GmbH
+experience-0-desc=Web Developer - NodeJS, JavaScript
+experience-1-title=Oktober 2014 - Februar 2015
 experience-1-company=Swisscom AG
 experience-1-desc=Application Developer - Document Management - Templating, Requirement Engineering, 2nd Level Support
 experience-2-title=January 2014 - June 2014
@@ -55,8 +58,3 @@ hobbies-1-desc=Seit 2008 arbeite ich als Freiwilliger in der Mozilla Community m
 hobbies-2-desc=I think we all need to step up for an open Web!
 my-blog=My Blog
 references-1-begin=Due to privacy constraints I will not publish any reference material here. Please get in touch with me if you need anything.
-
-
-
-
-
