Fix German text within EN

--- a/app/locales/en/content.properties
+++ b/app/locales/en/content.properties
@@ -54,7 +54,7 @@ projects-1-desc=PicoBudget.com : Expense tracking tool (NodeJS, Bootstrap)
 projects-2-desc=COBRA : very simple CMS (NodeJS, AngularJS)
 projects-3-desc=arewetenyet.com : Countdown to the 10th anniversary of Firefox (JavaScript)
 further-projects=More projects on GitHub
-hobbies-1-desc=Seit 2008 arbeite ich als Freiwilliger in der Mozilla Community mit. Zu Beginn habe ich Patches für Firefox erstellt. Mittlerweile engagiere ich mich als Mozilla Rep mit Fokus auf "Community Building". Seit 2012 helfe ich mit, die deutschsprachige Community zu organisieren und veranstalte Events in der Schweiz, Deutschland und Österreich.
+hobbies-1-desc=Since 2008 I'm working as a volunteer in the Mozilla community. I started with contributing patches for Firefox. Nowadays I'm engaged as a Mozilla Rep with a focus on Community Building. Since 2012 I'm helping to organize the German-speaking community and organize events in Switzerland, Germany and Austria. In 2016 I will be mainly focusing on Switzerland.
 hobbies-2-desc=I think we all need to step up for an open Web!
 my-blog=My Blog
 references-1-begin=Due to privacy constraints I will not publish any reference material here. Please get in touch with me if you need anything.
