--- a/app/locales/de/content.properties
+++ b/app/locales/de/content.properties
@@ -54,7 +54,7 @@ projects-1-desc=PicoBudget.com : Verwalten von Ausgaben (NodeJS, Bootstrap)
 projects-2-desc=COBRA : einfaches, selbst geschriebenes CMS (NodeJS, AngularJS)
 projects-3-desc=arewetenyet.com : Countdown zum 10. Geburtstag von Firefox - das war am 09.11.2014 (JavaScript)
 further-projects=Weitere Projekte auf GitHub
-hobbies-1-desc=Seit 2008 arbeite ich als Freiwilliger in der Mozilla Community mit. Zu Beginn habe ich Patches für Firefox erstellt. Mittlerweile engagiere ich mich als Mozilla Rep mit Fokus auf "Community Building". Seit 2012 helfe ich mit, die deutschsprachige Community zu organisieren und veranstalte Events in der Schweiz, Deutschland und Österreich.
+hobbies-1-desc=Seit 2008 arbeite ich als Freiwilliger in der Mozilla Community mit. Zu Beginn habe ich Patches für Firefox erstellt. Mittlerweile engagiere ich mich als Mozilla Rep mit Fokus auf "Community Building". Seit 2012 helfe ich mit, die deutschsprachige Community zu organisieren und veranstalte Events in der Schweiz, Deutschland und Österreich. In 2016 fokusiere ich mich vorallem auf die Schweizer Community.
 hobbies-2-desc=Mit meiner Überzeugung, dass wir alle für ein offenes Web einstehen müssen, passt dies wunderbar zu meiner Arbeit für Mozilla.
 my-blog=Mein Blog
 references-1-begin=Aus Rücksicht auf die Privatsphäre aller beteiligten Personen verzichte ich auf die Veröffentlichung von Zeugnissen, Arbeitsbewertungen und dergleichen. Auf Anfrage gebe ich diese natürlich gerne heraus.
